k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bibaluxe
  labels:
    name: bibaluxe
    environment: production
